...
const List<NavItem> _kNavItems = [
  NavItem(Icons.home_outlined, Icons.home_rounded, 'Home'),
  NavItem(Icons.search_rounded, Icons.search_rounded, 'Discover'),
  NavItem(
    Icons.add_rounded,
    Icons.add_rounded,
    'Pet Care',
  ), // center FAB / Middle item
  NavItem(Icons.storefront_outlined, Icons.storefront_rounded, 'Shop'),
  NavItem(Icons.person_outline_rounded, Icons.person_rounded, 'Profile'),
];

// ─────────────────────────────────────────────────────────────────────────────
...
                        : MainAxisAlignment.center,
                    children: [
                      BrandLogo(customSize: isExtended ? 30 : 32),
                      if (isExtended) ...[
                        const SizedBox(width: 12),
                        Text(
                          'PetFolio',
                          style: theme.textTheme.titleLarge?.copyWith(
                            fontWeight: FontWeight.w800,
                            color: cs.onSurface,
                            letterSpacing: -0.5,
                          ),
                        ),
...
